[package]
name = "minictl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '3.2.8'
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tera = "1"
lazy_static = "1.4.0"
rust-embed = "6.4.0"